force-app/main/default/objects/job_application__c/job_application__c.object-meta.xml
<CustomObject>
    <label>job application</label>
    <nameField>
        <label>job application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>job applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>