force-app/main/default/objects/job_application__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>job applications</relationshipLabel>
    <relationshipName>job_applications</relationshipName>
    <type>Lookup</type>
</CustomField>