force-app/main/default/objects/job_application__c/fields/Number_of_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reviews__c</fullName>
    <label>Number of Reviews</label>
    <summaryForeignKey>Review__c.job_application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>