force-app/main/default/objects/job_application__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>job applications</relationshipLabel>
    <relationshipName>job_applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>