force-app/main/default/objects/job_application__c/fields/Total_Rating1__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating1__c</fullName>
    <label>Total Rating1</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.job_application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>